[tool.poetry]
name = "motivational-posts-generator-for-instagram"
version = "0.1.0"
description = ""
authors = ["Renato Moraes <hexemeister@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
